--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
             <div class="cabecalho__pesquisar">
 
-                <input type="search" placeholder="Pesquisar" id="pesquisar" class="pesquisar__input">
-                <button class="pesquisar__botao">
+                <input placeholder="Pesquisar" id="pesquisar" class="pesquisar__input">
 
             </div>
 
